# antony_project

./: .env  .env.example  Dockerfile  README.md  check_feed.py  docker-compose.yml  main.py  mock_feed.py  push_to_hub.ps1  pyproject.toml  sample_out.json  sample_out_formatted.json  test_candle_sse.html  test_sse.html  verify_output.txt  verify_strike_logic.py
app/: main.py
app/api/: auth.py  feed.py  gtt.py  history.py  instrument.py  order.py  portfolio.py  stream.py
app/core/: config.py
app/db/: postgres.py  redis.py
app/models/: candle.py  gtt.py
app/services/: candle_aggregator.py  candle_persistence.py  feed_service.py  gtt_service.py  history_service.py  instrument_service.py  order_service.py  order_update_service.py  portfolio_service.py  upstox_auth.py  vwap_service.py
frontend/: Dockerfile  package.json
frontend/prisma/: schema.prisma
frontend/src/: app.css
frontend/src/lib/: config.ts
frontend/src/lib/components/: ActiveIndexCard.svelte  ActiveStrikeCard.svelte  ActiveStrikes.svelte  CombinedStrikeTable.svelte  GreeksTable.svelte  Header.svelte  IndexIndicatorTable.svelte  IndexSelector.svelte  NiftyCard.svelte  OpeningStatus.svelte  OptionChainTable.svelte  PatternTable.svelte  PriceActionTable.svelte  SentimentChart.svelte  UnifiedStrikeTable.svelte  UserMenu.svelte
frontend/src/lib/server/: prisma.ts
frontend/src/lib/stores/: candleData.ts  candles.ts  feed.ts  gtt.ts  historicalData.ts  liveFeed.ts  marketContext.ts  marketData.ts  (+5 more)
frontend/src/routes/: +layout.svelte  +page.svelte
scripts/: simple_verify.py  verify_vwap.py
(+20 files in other folders)
