[project]
name = "antony-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]>=0.123.5",
    "upstox-python-sdk>=2.19.0",
    "redis>=5.0.1",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.1.0",
    "websockets>=12.0",
    "protobuf>=4.25.2",
    "python-dotenv>=1.0.1",
]
